# subathon_timer

./: .gitignore  AGENTS.md  README.md  config.example.json  package-lock.json  package.json
.github/workflows/: build.yml
apps/auth-bridge/: README.md  package.json  tsconfig.json
apps/auth-bridge/src/: config.ts  index.ts  server.ts
apps/auth-bridge/src/providers/: streamlabs.test.ts  streamlabs.ts
apps/desktop/: .env  CHANGELOG.md  PATCH_NOTES.md  README.md  index.html  package-lock.json  package.json
apps/desktop/docs/: persistence-roadmap.md  shared-subathon-plan.md  state-runtime-audit.md  tip-providers.md
apps/desktop/scripts/: package-release.mjs  publish-release.mjs  version.mjs
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: AppFrame.tsx  ReasonWidget.tsx  RuntimeLifecycle.test.tsx  RuntimeLifecycle.tsx  TimerWidget.tsx  TrendChart.tsx  WheelDisplay.tsx  WheelLiveSurface.tsx  WheelSpinOverlay.tsx
apps/desktop/src/hooks/: useBootstrapRuntime.ts  useEventSubLifecycle.ts  useNativeSnapshotPersistence.ts  useOverlayRuntimeSync.ts  useSharedSessionLifecycle.ts  useSharedSessionSync.ts  useTimerRuntimeLifecycle.ts  useTipSessionLifecycle.ts  useTwitchSessionLifecycle.ts
apps/shared-session-service/: Dockerfile  README.md  package.json
apps/shared-session-service/src/: createServer.ts  server.test.ts  server.ts
src/: index.ts
(+59 files in other folders)
